# writing-tools-mcp

./: .gitignore  .mcp-config.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  build.sh  cache_gpt2_model.py  manifest.json  pyproject.toml  run_server.py  server.py
.cursor/: mcp.json
.cursor/rules/: writing_tools_server.mdc
.github/workflows/: build-mcpb.yml  test.yml
app/: main.py
data/baselines/: brown_corpus.json
images/: icon.icns
scripts/: build_mcpb.sh
server/: __init__.py  app.py  server.py
server/analyzers/: __init__.py  ai_detection.py  basic_stats.py  keyword_analysis.py  readability.py  style_analysis.py
server/config/: __init__.py  defaults.py  loader.py
server/models/: __init__.py  gpt2_manager.py  spacy_manager.py
server/stylometry/: __init__.py  analyzer.py  baselines.py  statistical.py
server/text_processing/: __init__.py  markdown_parser.py  preprocessor.py  sentence_splitter.py
tests/: conftest.py  test_analyzers.py  test_basic_tools.py  test_cleanup.py  test_config.py  test_main.py  test_markdown_markup_strip.py  test_models.py  test_nlp_tools.py  test_perplexity.py  test_reading_time.py  test_spellcheck.py  test_stylometry.py  test_text_analysis.py  test_text_processing.py
