[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writing-tools-mcp"
version = "0.1.0"
description = "MCP server for advanced text analysis, optimized for Claude Desktop."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
   { name="Will McGinnis", email="will@mcginniscommawill.com" },
]

dependencies = [
    "fastmcp>=2.14.0,<3.0.0",
    "pyspellchecker",
    "textstat",
    "spacy",
    "markdown-it-py",
    "requests",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "en-core-web-sm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/wdm0006/writing-tools-mcp" 
"Bug Tracker" = "https://github.com/wdm0006/writing-tools-mcp/issues" 

# Example for ruff (linter) configuration
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "C901"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build]
only-include = ["server.py"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
writing-tools-mcp = "server:main"
